--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  color: #fff;
+  background: url('./components/images/bg1.jpg') center no-repeat fixed;
+  margin-top: 55px !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section {
+  padding: 4em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+section h1 {
+  padding: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+section#home {
+  color: #fff;
+  padding: 4em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section#about{
+   background-color: #f8f6f8b8;
+}
+section#projects{
+  background-color: #bf7ad9b8;
 }
